@@ -1,5 +1,9 @@
 Revision history for Linux-Statm-Tiny
 
+{{$NEXT}}
+  [Enhancements]
+  - vsz and rss and explicitly defined as aliases
+
 0.0300    2015-01-12 11:26:08+00:00 Europe/London
   [Documentation]
   - Fixed typo in POD markup.
